--- a/index.html
+++ b/index.html
@@ -6,17 +6,28 @@
     <title>Maldivas CSS.</title>
 </head>
 <body>
-    <div class="bau">
-        <a href="pag/pagina2.html" class="link1">
-            Ilhas das Maldivas
-        </a>
-        <h4>A República das Maldivas, a sudoeste da Índia, é uma nação azul: 98% do seu território está coberto pelo mar. Os outros 2% correspondem a cerca de 1 200 pedaços de terra espalhados pelo Índico (em divelhi, o complexo idioma local, Maldivas é Maldwipa, o que significa “mil ilhas”), onde apenas 200 são habitados.     </h4>        
+    <div class="conteúdo">
+        <div class="posicao_maldivas">
+            <div class="alinhamento_link1">
+                <a href="pag/pagina2.html" id="link_pag2">
+                    Ilhas das Maldivas
+                </a>
+            </div>
+            <div class="text_introducao">
+                <h4>A República das Maldivas, a sudoeste da Índia, é uma nação azul: 98% do seu território está coberto pelo mar. Os outros 2% correspondem a cerca de 1 200 pedaços de terra espalhados pelo Índico (em divelhi, o complexo idioma local, Maldivas é Maldwipa, o que significa “mil ilhas”), onde apenas 200 são habitados.</h4>            
+            </div>
+        </div>
+        <div class="posicao_economia">
+            <div class="alinhamento_link2">
+                <a href="pag/pagina3.html" id="link_pag3">
+                    Econômica e Cultura
+                </a>
+            </div>
+            <div class="text_economia">
+                <h4>Venha conhecer um pouco sobre a cultura e econômia das Maldivas.</h4>
+            </div>        
+        </div>
+
     </div>
-    <div class="bau2">
-        <a href="pag/pagina3.html" class="link2">
-            Econômica e Cultura
-        </a>
-    </div>
-            <h4>Venha conhecer um pouco sobre a cultura e econômia das Maldivas.</h4>
 </body>
 </html>
