--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
 </head>
 <body>
     <div class="conteúdo">
-        <div class="posicao_maldivas">
-            <div class="alinhamento_link1">
-                <a href="pag/pagina2.html" id="link_pag2">
-                    Ilhas das Maldivas
-                </a>
+            <div class="Ilhas_Maldivas">
+                <div class="posicao_maldivas">
+                    <div class="alinhamento_link1">
+                        <a href="pag/pagina2.html" id="link_pag2">
+                            Ilhas das Maldivas
+                        </a>
+                    </div>
+                    <div class="text_introducao">
+                        <h4>A República das Maldivas, a sudoeste da Índia, é uma nação azul: 98% do seu território está coberto pelo mar. Os outros 2% correspondem a cerca de 1 200 pedaços de terra espalhados pelo Índico (em divelhi, o complexo idioma local, Maldivas é Maldwipa, o que significa “mil ilhas”), onde apenas 200 são habitados.</h4>            
+                    </div>
+                </div>
             </div>
-            <div class="text_introducao">
-                <h4>A República das Maldivas, a sudoeste da Índia, é uma nação azul: 98% do seu território está coberto pelo mar. Os outros 2% correspondem a cerca de 1 200 pedaços de terra espalhados pelo Índico (em divelhi, o complexo idioma local, Maldivas é Maldwipa, o que significa “mil ilhas”), onde apenas 200 são habitados.</h4>            
-            </div>
-        </div>
+    </div>
         <div class="posicao_economia">
             <div class="alinhamento_link2">
                 <a href="pag/pagina3.html" id="link_pag3">
