--- a/pag/pagina3.html
+++ b/pag/pagina3.html
@@ -2,84 +2,85 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../estilo_pág3.css">
     <title>Econômia e Cultura.</title>
 </head>
-<body bgcolor="#B0C4DE">
-    <font face="SimSun"><i><h1 align="middle">Econômia e Cultura</h1></i></font>
-    <font face="Calibri" color="Black"><h2>Econômia</h2></font>
-    <font face="Arial" color="Black"><p>As Maldivas possuem um IDH elevado, sendo considerado um dos melhores lugares para se morar na Ásia. Além do turismo a economia local é fortemente influenciada pela pesca. Boa parte dos moradores trabalham nesta atividade direta ou indiretamente.</p></font>
+<body>
+    <i><h1>Econômia e Cultura</h1></i>
+    <h2>Econômia</h2>
+    <p>As Maldivas possuem um IDH elevado, sendo considerado um dos melhores lugares para se morar na Ásia. Além do turismo a economia local é fortemente influenciada pela pesca. Boa parte dos moradores trabalham nesta atividade direta ou indiretamente.</p>
     <table border="2px">
-    <font face="Calibri" color="Black"><h3>PIB(Produto Interno Bruto) de setor em porcentagem:</h3></font>
+    <h3>PIB(Produto Interno Bruto) de setor em porcentagem:</h3>
         <tr>
             <td>
-                <font face="Arial"color=Black>
-                    Setores
-                </font></td>
+                Setores
+            </td>
             <td>
-                <font face="Arial"color=Black><B>
+                <B>
                     PIB %
-                </B></font></td>
+                </B>
+            </td>
         </tr>
         <tr>
             <td>
-                <font face="Arial"color=Black>
-                    Agricultura/Pesca
-                </font></td>
+                Agricultura/Pesca
+            </td>
             <td>
-                <font face="Arial"color=Black><B>
+                <B>
                     (20%)
-                </B></font></td>
+                </B>
+            </td>
         </tr>
         <tr>
             <td>
-                <font face="Arial"color=Black>
-                    Indústria
-                </font></td>
+                Indústria
+            </td>
             <td>
-                <font face="Arial"color=Black><B>
+                <B>
                     (18%)
-                </B></font></td>
+                </B>
+            </td>
         </tr>
         <tr>
             <td>
-                <font face="Arial"color=Black>
-                    Comércio/Serviço
-                </font></td>
+                Comércio/Serviço
+            </td>
             <td>
-                <font face="Arial"color=Black><B>
+                <B>
                     (62%)
-                </B></font></td>
+                </B>
+            </td>
         </tr>
     </table>
     <br>
-    <font face="Calibri" color="Black"><h3>O PIB total das maldivas é igual a 5,406 bilhões USD (2021).</h3></font>
-    <img src="../img/Industria_pesca.jpg.jpg" alt="Industria de peixe" width="25%" align="center" border="2">
-    <img src="../img/pesca.jpg" alt="Barco de pesca" width="23.5%" align="center" border="2">
-    <img src="../img/agricultura_maldivas.jpg" alt="Plantação de Mudas Papayas." width="25.3%" align="center" border="2">
+    <h3>O PIB total das maldivas é igual a 5,406 bilhões USD (2021).</h3>
+    <img src="../img/Industria_pesca.jpg.jpg">
+    <img src="../img/pesca.jpg">
+    <img src="../img/agricultura_maldivas.jpg">
     
     <hr>
-    <font face="Calibri" color="Black"><h2>Cultura</h2></font>
-    <font face="Arial" color="Black">A cultura das Maldivas em relação à música tem raízes na cultura africana, como no caso do Bodu-Beru, o gênero musical mais comum da região.
-    Reza a lenda que esse estilo musical foi introduzido no país por marinheiros do Oceano Índico, por volta do século 11 dC.</font>
+    <h2>Cultura</h2>
+    A cultura das Maldivas em relação à música tem raízes na cultura africana, como no caso do Bodu-Beru, o gênero musical mais comum da região.
+    Reza a lenda que esse estilo musical foi introduzido no país por marinheiros do Oceano Índico, por volta do século 11 dC.
     <hr>
-    <img src="../img/danças_culturais.jpg" alt="Festival Cultural" width="25%" align="center" border="2">
-    <img src="../img/banda_cultural.jpg" alt="Banda Cultural" width="39.5%" align="center" border="2">
-    <img src="../img/maldivas_costume.jpg" alt="Horizente" width="34%" align="center" border="2">
+    <img src="../img/danças_culturais.jpg">
+    <img src="../img/banda_cultural.jpg">
+    <img src="../img/maldivas_costume.jpg">
     <br>
-    <font face="Calibri" color="Black"><h2>Religião</h2></font>
-    <font face="Arial" color="Black">Em relação à religião, o local é um país de maioria muçulmana, o que impacta diretamente na cultura das Maldivas, repleta de regras de convivência.
+    <h2>Religião</h2>
+    Em relação à religião, o local é um país de maioria muçulmana, o que impacta diretamente na cultura das Maldivas, repleta de regras de convivência.
     Entre essas regras, uma das principais é em relação ao uso de biquínis, pois há praias específicas para usar essa peça, chamadas de Bikini Beach.        
     Isso significa que nos demais lugares e praias públicas, é preciso se vestir com roupas que cobrem os ombros e joelhos, sem decotes e que não sejam justas.
-    Além disso, por conta da religião, é comum que lojas e comércios fechem às suas portas em horários de oração.</font>
+    Além disso, por conta da religião, é comum que lojas e comércios fechem às suas portas em horários de oração.
     <br>
-    <img src="../img/religião_maldivas.jpg" alt="Religião muçulmana" width="30%" align="center" border="2">
-    <img src="../img/religião_maldivas2.jpg" alt="Religião muçulmana" width="30%" align="center" border="2">
-    <img src="../img/religião_maldivas3.jpg" alt="Religião muçulmana" width="26.7%" align="center" border="2">
+    <img src="../img/religião_maldivas.jpg">
+    <img src="../img/religião_maldivas2.jpg">
+    <img src="../img/religião_maldivas3.jpg">
     <hr>
     <br>
-    <a href="./pagina2.html"><font face="Arial" color="Black">Mais detalhes</font></a>
+    <a href="./pagina2.html">Mais detalhes</a>
     <br>
     <br>
-    <a href="../index.html"><font face="Arial" color="Black"> Página inicial</font></a>
+    <a href="../index.html"> Página inicial</a>
 </body>
 </html>
