--- a/pag/pagina2.html
+++ b/pag/pagina2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../estilo_pág2.css">
+    <link rel="stylesheet" href="../CSS/estilo_pág2.css">
     <title>Ilhas das Maldivas</title>
 </head>
 <body>
