--- a/pag/pagina3.html
+++ b/pag/pagina3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../estilo_pág3.css">
+    <link rel="stylesheet" href="../CSS/estilo_pág3.css">
     <title>Econômia e Cultura.</title>
 </head>
 <body>
