--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./CSS/estilo_pág1.css">
     <title>Maldivas CSS.</title>
 </head>
-<body>
+<body background="img/Design sem nome.png">
     <div class="conteúdo">
                 <div class="posicao_maldivas">
                     <div class="alinhamento_link1">
@@ -23,6 +23,7 @@
                 </a>
             </div>
             <div class="text_economia">
+                <h4>Por que as Maldivas tem um poder economico significativo?</h4>
                 <h4>Venha conhecer um pouco sobre a cultura e econômia das Maldivas.</h4>
             </div>        
     </div>
