--- a/pag/pagina2.html
+++ b/pag/pagina2.html
@@ -30,10 +30,10 @@
                             4.História
                         </a>
                         <a href="#Mais Opções"> 
-                            5.Mais Lugares
+                            5.Mais_Lugares
                         </a>
                         <a href="../index.html">
-                            6.Página Inicial
+                            6.Página_Inicial
                         </a>
             </div>
                 <div class="titulo_tabela">
@@ -157,7 +157,9 @@
                 <li>MAIS INFORMAÇÕES</li>
                 <div id="Mais Opções"></div>
                 <br>
-                <a href="./pagina3.html">Econômia e Cultura</a>
+                <div class="link_pág3">
+                    <a href="./pagina3.html">Econômia e Cultura</a>
+                </div>
             </div>   
             </ol>      
     </div>
