--- a/pag/pagina3.html
+++ b/pag/pagina3.html
@@ -6,81 +6,113 @@
     <title>Econômia e Cultura.</title>
 </head>
 <body>
-    <i><h1>Econômia e Cultura</h1></i>
-    <h2>Econômia</h2>
-    <p>As Maldivas possuem um IDH elevado, sendo considerado um dos melhores lugares para se morar na Ásia. Além do turismo a economia local é fortemente influenciada pela pesca. Boa parte dos moradores trabalham nesta atividade direta ou indiretamente.</p>
-    <table border="2px">
-    <h3>PIB(Produto Interno Bruto) de setor em porcentagem:</h3>
-        <tr>
-            <td>
-                Setores
-            </td>
-            <td>
-                <B>
-                    PIB %
-                </B>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Agricultura/Pesca
-            </td>
-            <td>
-                <B>
-                    (20%)
-                </B>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Indústria
-            </td>
-            <td>
-                <B>
-                    (18%)
-                </B>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Comércio/Serviço
-            </td>
-            <td>
-                <B>
-                    (62%)
-                </B>
-            </td>
-        </tr>
-    </table>
+    <div class="Titulo">
+        <i><h1>Econômia e Cultura</h1></i>
+    </div>
+    <div class="link_pág1_pág2">
+        <a href="./pagina2.html">Mais_detalhes</a>
+        <a href="../index.html"> Página_inicial</a>
+    </div>
+    <div class="economia">
+            <h2>Econômia</h2>
+        <div class="texto_economia">
+            <p>As Maldivas possuem um IDH elevado, sendo considerado um dos melhores lugares para se morar na Ásia. Além do turismo a economia local é fortemente influenciada pela pesca. Boa parte dos moradores trabalham nesta atividade direta ou indiretamente.</p>
+        </div> 
+        <div class="titulo_tabela">
+            <h3>PIB(Produto Interno Bruto) de setor em porcentagem:</h3>
+        </div>
+        <div class="tabela_economia">
+            <table border="2px">
+                <tr>
+                    <td>
+                    Setores
+                </td>
+                <td>
+                    <B>
+                        PIB %
+                    </B>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Agricultura/Pesca
+                </td>
+                <td>
+                    <B>
+                        (20%)
+                    </B>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Indústria
+                </td>
+                <td>
+                    <B>
+                        (18%)
+                    </B>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Comércio/Serviço
+                </td>
+                <td>
+                    <B>
+                        (62%)
+                    </B>
+                </td>
+            </tr>
+        </table>
+        </div>
     <br>
-    <h3>O PIB total das maldivas é igual a 5,406 bilhões USD (2021).</h3>
-    <img src="../img/Industria_pesca.jpg.jpg">
-    <img src="../img/pesca.jpg">
-    <img src="../img/agricultura_maldivas.jpg">
+    <div class="texto_economia">
+        <h3>O PIB total das maldivas é igual a 5,406 bilhões USD (2021).</h3>
+    </div>
+    <div class="imagens_economia">
+        <img src="../img/Industria_pesca.jpg.jpg">
+        <img src="../img/pesca.jpg">
+        <img src="../img/agricultura_maldivas.jpg">
+    </div>
+</div>
     
-    <hr>
-    <h2>Cultura</h2>
-    A cultura das Maldivas em relação à música tem raízes na cultura africana, como no caso do Bodu-Beru, o gênero musical mais comum da região.
-    Reza a lenda que esse estilo musical foi introduzido no país por marinheiros do Oceano Índico, por volta do século 11 dC.
-    <hr>
-    <img src="../img/danças_culturais.jpg">
-    <img src="../img/banda_cultural.jpg">
-    <img src="../img/maldivas_costume.jpg">
+
+    <div class="cultura">
+        <div class="titulo_cultura">
+            <h2>Cultura</h2>
+        </div>
+        <div class="texto_cultura">
+            <p>A cultura das Maldivas em relação à música tem raízes na cultura africana, como no caso do Bodu-Beru, o gênero musical mais comum da região.
+            Reza a lenda que esse estilo musical foi introduzido no país por marinheiros do Oceano Índico, por volta do século 11 dC.</p>
+            <p>Os habitantes acreditam na existência dos jinns, que é um termo arabê que significa gênio ou espírito ruim. Assim, para se protegerem deles, os habitantes usam recursos como rituais.</p>
+        </div>
+        <div class="imagens_cultura">
+            <img src="../img/danças_culturais.jpg">
+            <img src="../img/banda_cultural.jpg">
+            <img src="../img/maldivas_costume.jpg">
+        </div>
+    </div>
+    <div class="religião">
+        <div class="titulo_religiao">
+            <h2>Religião</h2>
+        </div>
+        <div class="texto_religiao">
+            Em relação à religião, o local é um país de maioria muçulmana, o que impacta diretamente na cultura das Maldivas, repleta de regras de convivência.
+            Entre essas regras, uma das principais é em relação ao uso de biquínis, pois há praias específicas para usar essa peça, chamadas de Bikini Beach.        
+            Isso significa que nos demais lugares e praias públicas, é preciso se vestir com roupas que cobrem os ombros e joelhos, sem decotes e que não sejam justas.
+            Além disso, por conta da religião, é comum que lojas e comércios fechem às suas portas em horários de oração.
+        </div>
+        <br>
+        <div class="imagens_religiao">
+            <img src="../img/religião_maldivas.jpg">
+            <img src="../img/religião_maldivas2.jpg">
+            <img src="../img/religião_maldivas3.jpg">
+        </div>
+    </div>
     <br>
-    <h2>Religião</h2>
-    Em relação à religião, o local é um país de maioria muçulmana, o que impacta diretamente na cultura das Maldivas, repleta de regras de convivência.
-    Entre essas regras, uma das principais é em relação ao uso de biquínis, pois há praias específicas para usar essa peça, chamadas de Bikini Beach.        
-    Isso significa que nos demais lugares e praias públicas, é preciso se vestir com roupas que cobrem os ombros e joelhos, sem decotes e que não sejam justas.
-    Além disso, por conta da religião, é comum que lojas e comércios fechem às suas portas em horários de oração.
-    <br>
-    <img src="../img/religião_maldivas.jpg">
-    <img src="../img/religião_maldivas2.jpg">
-    <img src="../img/religião_maldivas3.jpg">
-    <hr>
-    <br>
-    <a href="./pagina2.html">Mais detalhes</a>
-    <br>
-    <br>
-    <a href="../index.html"> Página inicial</a>
+    <div class="link_pág1_pág2">
+        <a href="./pagina2.html">Mais_detalhes</a>
+        <a href="../index.html"> Página_inicial</a>
+    </div>
 </body>
 </html>
