Ajustando a pág inicial

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./CSS/estilo_pág1.css">
     <title>Maldivas CSS.</title>
 </head>
-<body background="img/Design sem nome.png">
+<body>
     <div class="conteúdo">
                 <div class="posicao_maldivas">
                     <div class="alinhamento_link1">
