--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../CSS/estilo_pág1.css">
+    <link rel="stylesheet" href="./CSS/estilo_pág1.css">
     <title>Maldivas CSS.</title>
 </head>
 <body>
